# ChangeLog for dev-ruby/msgpack
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/msgpack/ChangeLog,v 1.11 2011/08/12 18:02:13 graaff Exp $

  12 Aug 2011; Hans de Graaff <graaff@gentoo.org> -msgpack-0.4.2.ebuild,
  -msgpack-0.4.3.ebuild, -msgpack-0.4.4.ebuild:
  Remove old versions.

*msgpack-0.4.5 (10 May 2011)

  10 May 2011; MATSUU Takuto <matsuu@gentoo.org> +msgpack-0.4.5.ebuild:
  Version bumped. Added ruby19 to USE_RUBY.

*msgpack-0.4.4 (31 Dec 2010)

  31 Dec 2010; Hans de Graaff <graaff@gentoo.org> +msgpack-0.4.4.ebuild:
  Version bump.

  31 Dec 2010; Hans de Graaff <graaff@gentoo.org> -msgpack-0.3.9.ebuild:
  Remove old version.

*msgpack-0.4.3 (19 Jul 2010)

  19 Jul 2010; Hans de Graaff <graaff@gentoo.org> +msgpack-0.4.3.ebuild:
  Version bump.

*msgpack-0.4.2 (05 Jun 2010)

  05 Jun 2010; Hans de Graaff <graaff@gentoo.org> +msgpack-0.4.2.ebuild:
  Version bump.

  26 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -msgpack-0.3.3.ebuild, -msgpack-0.3.6.ebuild, msgpack-0.3.9.ebuild:
  Reduce size of configure/compile functions, die if tests fail, add ree18
  support.

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  msgpack-0.3.6.ebuild, msgpack-0.3.9.ebuild:
  Various cleanups.

*msgpack-0.3.9 (30 Apr 2010)

  30 Apr 2010; Hans de Graaff <graaff@gentoo.org> +msgpack-0.3.9.ebuild:
  Version bump. Move .so installation to compile phase so that it can be
  used during testing.

*msgpack-0.3.6 (04 Apr 2010)

  04 Apr 2010; Hans de Graaff <graaff@gentoo.org> +msgpack-0.3.6.ebuild:
  Version bump. Convert to ruby-fakegem. Fix QA notice. Run tests.

  02 Mar 2010; MATSUU Takuto <matsuu@gentoo.org> +msgpack-0.3.3.ebuild,
  +metadata.xml:
  Initial import.

*msgpack-0.3.3 (02 Mar 2010)

  02 Mar 2010; MATSUU Takuto <matsuu@gentoo.org> +msgpack-0.3.3.ebuild,
  +metadata.xml:
  Initial import.
