@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/msgpack
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/msgpack/ChangeLog,v 1.11 2011/08/12 18:02:13 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/msgpack/ChangeLog,v 1.12 2011/08/12 18:05:36 graaff Exp $
+
+*msgpack-0.4.6 (12 Aug 2011)
+
+  12 Aug 2011; Hans de Graaff <graaff@gentoo.org> +msgpack-0.4.6.ebuild:
+  Version bump.
 
   12 Aug 2011; Hans de Graaff <graaff@gentoo.org> -msgpack-0.4.2.ebuild,
   -msgpack-0.4.3.ebuild, -msgpack-0.4.4.ebuild:
